05_keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: hbr-keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: https
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: hbr-keycloak
  labels:
    app: keycloak
spec:
  replicas: 3
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:25.0.1
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
      nodeSelector:
        role: "worker"
